Création de la fonction validate, deleteFormulaire et messageRemerciement

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -527,3 +527,23 @@ footer {
   }
 }
 
+/*CLASS QUE J'AI CRÉER*/
+
+.thanksMessage{
+  margin: 300px auto;
+  text-align: center;
+  font-size: 40px;
+  font-family: "DM Sans", Arial, Helvetica, sans-serif;
+}
+.btnCloseModal{
+  background: #fe142f;
+  display: block;
+  margin: 0 auto;
+  border-radius: 7px;
+  font-size: 1rem;
+  padding: 12px 82px;
+  color: #fff;
+  cursor: pointer;
+  border: 0;
+  margin-bottom: 20px;
+}
